sources = [
    'Application.vala',
    'MainWindow.vala',
    'SecretObject.vala',
    'CredentialObject.vala',
    'Dialogs/NewLocalDialog.vala',
    'Dialogs/LoadLocalDialog.vala',
    'Views/EmptyListView.vala',
    'Views/WelcomeView.vala',
    'Widgets/SecureItem.vala',
]

executable(
    meson.project_name(),
    gresource_hermetic,
    sources,
    dependencies: dependencies,
    install: true
)
